# gen4-smogon-tracker

./: .gitignore  Cargo.toml  build.rs  output.css  pokemon.db
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs
src/components/: back_button.rs  mod.rs
src/pages/: formats.rs  home.rs  mod.rs  pkm.rs  summary_view.rs
