[package]
name = "gen4-smogon-tracker"
version = "0.1.0"
edition = "2021"
description = "Smogon Set Tracker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smog_strat_dex_rs = {git = "https://github.com/SteveCookTU/smog_strat_dex_rs.git", rev = '73a2e5b'}
rusqlite = {version = "0.29.0", features = ['bundled'] }
tokio = {version = "1.26.0", features = ['full']}
futures = "0.3.26"
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
dioxus-router = "0.3.0"
rand = "0.8.5"
image = "0.24.5"

[profile.release]
lto = true
opt-level = "z"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
FileDescription = "Smogon Set Tracker"
LegalCopyright = "SteveCookTU @ 2023"